fix whitespace so that the menu can stay on one line...

--- a/css/default.css
+++ b/css/default.css
@@ -9,6 +9,7 @@ body {
 
 .topbar {
     box-sizing: border-box;
+    white-space: nowrap;
 }
 
 .topbar .item {
